--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
     "dependencies": {
         "express": "^4.17.1",
         "socket.io": ""
-    }
+    },
+    "scripts": {
+        "start": "node index.js"
+      }
 }
